# pyeloquent

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
.github/workflows/: python-package.yml
tests/: test_core.py
